<resources>
    <string name="app_name">GithubApp</string>
    <string name="searchbar_hint">Cari user</string>
    <string name="username">Username</string>
    <string name="cd_iv_photo">Photo User</string>
    <string name="full_name">Full Name</string>
    <string name="followers">Followers</string>
    <string name="not_available">NA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Followings</string>
    <string name="user_not_found">User Not Found</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="button_favorite">Button favorite</string>
    <string name="tab_follow">Tab Follow</string>
</resources>